// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/steps/demo/customized-progress-dot.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        You can hover on the dot.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/error.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish ant-steps-next-error"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-check ant-steps-finish-icon"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-error"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-close ant-steps-error-icon"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Process
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/icon.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Login
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-finish ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-solution"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Verification
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-loading"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Pay
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait ant-steps-item-custom"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-smile-o"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="smile"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M288 421a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm352 0a48 48 0 1 0 96 0 48 48 0 1 0-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2-44.3-18.7-84.1-45.6-118.3-79.8-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8c18.7-44.3 45.6-84.1 79.8-118.3 34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2 44.3 18.7 84.1 45.6 118.3 79.8 34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8c-18.7 44.3-45.6 84.1-79.8 118.2zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360c-4.6 0-8.2 3.8-8 8.4 4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6c.2-4.6-3.4-8.4-8-8.4z"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Done
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/progress-dot.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <span
          class="ant-steps-icon-dot"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/simple.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-check ant-steps-finish-icon"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/small-size.md correctly 1`] = `
<div
  class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-label-horizontal"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-check ant-steps-finish-icon"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/step-next.md correctly 1`] = `
<div>
  <div
    class="ant-steps ant-steps-horizontal ant-steps-label-horizontal"
  >
    <div
      class="ant-steps-item ant-steps-item-process"
    >
      <div
        class="ant-steps-item-tail"
      />
      <div
        class="ant-steps-item-icon"
      >
        <span
          class="ant-steps-icon"
        >
          1
        </span>
      </div>
      <div
        class="ant-steps-item-content"
      >
        <div
          class="ant-steps-item-title"
        >
          First
        </div>
      </div>
    </div>
    <div
      class="ant-steps-item ant-steps-item-wait"
    >
      <div
        class="ant-steps-item-tail"
      />
      <div
        class="ant-steps-item-icon"
      >
        <span
          class="ant-steps-icon"
        >
          2
        </span>
      </div>
      <div
        class="ant-steps-item-content"
      >
        <div
          class="ant-steps-item-title"
        >
          Second
        </div>
      </div>
    </div>
    <div
      class="ant-steps-item ant-steps-item-wait"
    >
      <div
        class="ant-steps-item-tail"
      />
      <div
        class="ant-steps-item-icon"
      >
        <span
          class="ant-steps-icon"
        >
          3
        </span>
      </div>
      <div
        class="ant-steps-item-content"
      >
        <div
          class="ant-steps-item-title"
        >
          Last
        </div>
      </div>
    </div>
  </div>
  <div
    class="steps-content"
  >
    First-content
  </div>
  <div
    class="steps-action"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Next
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/vertical.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-check ant-steps-finish-icon"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/vertical-small.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical ant-steps-small"
>
  <div
    class="ant-steps-item ant-steps-item-finish"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        <i
          class="anticon anticon-check ant-steps-finish-icon"
        />
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Finished
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-process"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        2
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        In Progress
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
  <div
    class="ant-steps-item ant-steps-item-wait"
  >
    <div
      class="ant-steps-item-tail"
    />
    <div
      class="ant-steps-item-icon"
    >
      <span
        class="ant-steps-icon"
      >
        3
      </span>
    </div>
    <div
      class="ant-steps-item-content"
    >
      <div
        class="ant-steps-item-title"
      >
        Waiting
      </div>
      <div
        class="ant-steps-item-description"
      >
        This is a description.
      </div>
    </div>
  </div>
</div>
`;
